// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array type (custom type) 1`] = `
Object {
  "children": Object {
    "foo": Object {
      "flags": Object {
        "presence": "required",
        "sparse": false,
      },
      "items": Array [
        Object {
          "children": Object {
            "id": Object {
              "flags": Object {
                "presence": "required",
              },
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "name": Object {
              "flags": Object {
                "presence": "required",
              },
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
          },
          "type": "object",
        },
      ],
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`array type (union type) 1`] = `
Object {
  "children": Object {
    "foo": Object {
      "flags": Object {
        "presence": "required",
        "sparse": false,
      },
      "items": Array [
        Object {
          "invalids": Array [
            Infinity,
            -Infinity,
          ],
          "type": "number",
        },
        Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      ],
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`array type 1`] = `
Object {
  "children": Object {
    "foo": Object {
      "flags": Object {
        "presence": "required",
        "sparse": false,
      },
      "items": Array [
        Object {
          "invalids": Array [
            Infinity,
            -Infinity,
          ],
          "type": "number",
        },
      ],
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`number type 1`] = `
Object {
  "children": Object {
    "foo": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "rules": Array [
        Object {
          "name": "integer",
        },
      ],
      "type": "number",
    },
  },
  "type": "object",
}
`;

exports[`object type (inner with override)  1`] = `
Object {
  "children": Object {
    "options": Object {
      "children": Object {
        "bar": Object {
          "flags": Object {
            "presence": "required",
          },
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "foo": Object {
          "flags": Object {
            "presence": "optional",
          },
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      },
      "dependencies": Array [
        Object {
          "key": null,
          "peers": Array [
            "foo",
            "bar",
          ],
          "type": "xor",
        },
      ],
      "flags": Object {
        "presence": "optional",
      },
      "type": "object",
    },
  },
  "type": "object",
}
`;

exports[`object type (inner)  1`] = `
Object {
  "children": Object {
    "options": Object {
      "children": Object {
        "bar": Object {
          "flags": Object {
            "presence": "required",
          },
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "foo": Object {
          "flags": Object {
            "presence": "optional",
          },
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      },
      "flags": Object {
        "presence": "optional",
      },
      "type": "object",
    },
  },
  "type": "object",
}
`;

exports[`object type 1`] = `
Object {
  "children": Object {
    "bar": Object {
      "flags": Object {
        "presence": "optional",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "baz": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "foo": Object {
      "flags": Object {
        "presence": "optional",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "dependencies": Array [
    Object {
      "key": null,
      "peers": Array [
        "foo",
        "bar",
      ],
      "type": "xor",
    },
  ],
  "type": "object",
}
`;

exports[`string type 1`] = `
Object {
  "children": Object {
    "bar": Object {
      "flags": Object {
        "presence": "optional",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "foo": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "rules": Array [
        Object {
          "arg": 10,
          "name": "max",
        },
        Object {
          "arg": 2,
          "name": "min",
        },
      ],
      "type": "string",
    },
  },
  "type": "object",
}
`;
